# Mental-Health-Therapy-Agent

./: .gitignore  Frontend.py  main.py  pyproject.toml  requirements.txt  test.py
backend/: agent_graph.py  ai_agent.py  main.py  state.py  tools.py
backend/emotion_classification/: emotion_classification.py
backend/final_model/: ai_agent.py
backend/fisrt_layer/: agent.py
backend/intent_dedector/: ai_agent.py
backend/safety_check/: safety.py
backend/tools/: emergency_call.py  rag.py
db/chroma_db/: chroma.sqlite3
