[project]
name = "mental-health-therapy-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "twilio>=9.9.1",
    "typing>=3.10.0.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.40.0",
]
